--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box; 
     font-size: 15px; 
+    
 }
 
 /* div{
@@ -41,6 +42,9 @@ body{
     text-transform: uppercase;
 }
 
+.reseaux{
+    text-decoration: none;
+}
 .navbar-nav{
     margin-left: 30px;
     padding: 0px;
@@ -134,7 +138,7 @@ body{
 
 .card-img-top{
     width: 100%;
-    height: 70%;
+    height: 50%;
     display: flex;
 }
 
@@ -159,8 +163,8 @@ body{
 }
 
 .img-real{
-    width: 70%;
-    height: auto;
+    width: 100%;
+    height: 170px;
 }
 
 .card-text{
@@ -227,6 +231,14 @@ ul{
     font-weight: 700;
     color: #29292A;
     text-decoration: none;
+}
+.resume{
+    font-weight: 400;
+    font-size: 20px;
+    color: #29292A;
+    text-decoration: none;
+    padding: 1rem;
+
 }
 
 
@@ -334,7 +346,16 @@ h1{
 
 @media (min-width: 600px) and (max-width: 1000px) { 
     body{
-        
+        font-size: 16px;
+        color: #333333;
+        text-align: center;
+        padding: 0px 20px;
+        width: 100%;
+        height: 100vh;
+        background-color: #f8f8f8;
+    }
+    body{
+        font-size: 12px;
         color: #333333;
         text-align: center;
         padding: 0px;
@@ -361,6 +382,27 @@ h1{
         margin-left: auto;
         margin-right: auto;
     }
+    .title{
+        font-weight: 600;
+        color: #29292A;
+        text-decoration: none;
+    }
+    
+    .title:hover{
+        font-weight: 600;
+        color: #29292A;
+        text-decoration: none;
+    }
+
+    .resume{
+        font-weight: 500;
+        font-size: 12px;
+        color: #29292A;
+        text-decoration: none;
+        padding: 1rem;
+    
+    }
+
     .img-real{
         width: 100%;
         height: auto;
